--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" epub:prefix="z3998: http://www.daisy.org/z3998/2012/vocab/structure/, se: https://standardebooks.org/vocab/1.0" xml:lang="LANG">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" epub:prefix="z3998: http://www.daisy.org/z3998/2012/vocab/structure/, se: https://standardebooks.org/vocab/1.0" xml:lang="en-GB">
 	<head>
 		<title>Table of Contents</title>
 	</head>
@@ -14,7 +14,36 @@
 					<a href="text/imprint.xhtml">Imprint</a>
 				</li>
 				<li>
-					<a href="text/chapter-1.xhtml"><span epub:type="z3998:roman">I</span>: CHAPTER_TITLE</a>
+					<a href="text/preface.xhtml">Preface</a>
+				</li>
+				<li>
+					<a href="text/introduction.xhtml">Introduction</a>
+				</li>
+				<li>
+					<a href="text/halftitlepage.xhtml">Sir Gawain and the Green Knight</a>
+					<ol>
+						<li>
+							<a href="text/fit-1.xhtml">Fit <span epub:type="z3998:roman">I</span></a>
+						</li>
+						<li>
+							<a href="text/fit-2.xhtml">Fit <span epub:type="z3998:roman">II</span></a>
+						</li>
+						<li>
+							<a href="text/fit-3.xhtml">Fit <span epub:type="z3998:roman">III</span></a>
+						</li>
+						<li>
+							<a href="text/fit-4.xhtml">Fit <span epub:type="z3998:roman">IV</span></a>
+						</li>
+					</ol>
+				</li>
+				<li>
+					<a href="text/glossary.xhtml">Glossary</a>
+				</li>
+				<li>
+					<a href="text/endnotes.xhtml">Endnotes</a>
+				</li>
+				<li>
+					<a href="text/loi.xhtml">List of Illustrations</a>
 				</li>
 				<li>
 					<a href="text/colophon.xhtml">Colophon</a>
@@ -28,7 +57,16 @@
 			<h2 epub:type="title">Landmarks</h2>
 			<ol>
 				<li>
-					<a href="text/chapter-1.xhtml" epub:type="bodymatter z3998:fiction">WORK_TITLE</a>
+					<a href="text/fit-1.xhtml" epub:type="bodymatter">Sir Gawain and the Green Knight</a>
+				</li>
+				<li>
+					<a href="text/glossary.xhtml" epub:type="backmatter glossary">Glossary</a>
+				</li>
+				<li>
+					<a href="text/endnotes.xhtml" epub:type="backmatter endnotes">Endnotes</a>
+				</li>
+				<li>
+					<a href="text/loi.xhtml" epub:type="backmatter loi">List of Illustrations</a>
 				</li>
 			</ol>
 		</nav>
