--- a/src/epub/text/fit-3.xhtml
+++ b/src/epub/text/fit-3.xhtml
@@ -508,7 +508,7 @@
 					<br/>
 					<span class="i8">To hew in two they hie,</span>
 					<br/>
-					<span class="i8">By the back-bone to unbind.</span>
+					<span class="i8">By the backbone to unbind.</span>
 				</p>
 			</section>
 			<section id="stanza-54">
@@ -902,7 +902,7 @@
 					<br/>
 					<span>Ought verily to yearn to a creature so young,</span>
 					<br/>
-					<span>And teach her some token of true-love dealings.</span>
+					<span>And teach her some token of truelove dealings.</span>
 					<br/>
 					<span>What! are ye so ignorant, in honour so high?</span>
 					<br/>
@@ -1158,7 +1158,7 @@
 					<br/>
 					<span>Then clasp’d he his neck and courteously kiss’d him,</span>
 					<br/>
-					<span>And served him eft-soons with a second kiss after.</span>
+					<span>And served him eftsoons with a second kiss after.</span>
 					<br/>
 					<span>“We are even,” quoth the athel, “this ev’ning once more</span>
 					<br/>
@@ -1250,7 +1250,7 @@
 					<br/>
 					<span>For I have tried thee twice, and true have I found thee.</span>
 					<br/>
-					<span>Now ‘third time throw best’<a href="endnotes.xhtml#note-146" id="noteref-146" epub:type="noteref">146</a> bethink thee to-morrow,</span>
+					<span>Now ‘third time throw best’<a href="endnotes.xhtml#note-146" id="noteref-146" epub:type="noteref">146</a> bethink thee tomorrow,</span>
 					<br/>
 					<span>Máke we mérry while we máy, with a mind upon joy,</span>
 					<br/>
@@ -1362,7 +1362,7 @@
 					<br/>
 					<span>And hunters ay sped them, splash’d and bespatter’d,</span>
 					<br/>
-					<span>In this manner by the mounts, till mid-morn was past,</span>
+					<span>In this manner by the mounts, till midmorn was past,</span>
 					<br/>
 					<span>While the athel at home lay wholesomely sleeping</span>
 					<br/>
@@ -1686,7 +1686,7 @@
 					<br/>
 					<span>Rose and array’d him in a raiment noble,</span>
 					<br/>
-					<span>Laid by the love-lace, that the lady had raught him,</span>
+					<span>Laid by the lovelace, that the lady had raught him,</span>
 					<br/>
 					<span>And hid it with heed where eft he might find it</span>
 					<br/>
@@ -1818,7 +1818,7 @@
 					<br/>
 					<span>All gamesome he greets him and graciously speaks;</span>
 					<br/>
-					<span>“I am first to fulfil our forewards to-day,</span>
+					<span>“I am first to fulfil our forewards today,</span>
 					<br/>
 					<span>That we spoke, good speed, when we spared not of drink.”</span>
 					<br/>
