--- a/src/epub/text/fit-1.xhtml
+++ b/src/epub/text/fit-1.xhtml
@@ -142,7 +142,7 @@
 					<br/>
 					<span class="i8">And the proudest Prince was he;</span>
 					<br/>
-					<span class="i8">Ye might not find to-day</span>
+					<span class="i8">Ye might not find today</span>
 					<br/>
 					<span class="i8">So brave a company.</span>
 				</p>
@@ -564,7 +564,7 @@
 					<br/>
 					<span>All that court so stately were still as a stone</span>
 					<br/>
-					<span class="i13">well-nigh;</span>
+					<span class="i13">wellnigh;</span>
 					<br/>
 					<span class="i8">Not all, in faith! for fear,</span>
 					<br/>
@@ -910,7 +910,7 @@
 					<br/>
 					<span>I may be found upon fold, and fetch thee such wages</span>
 					<br/>
-					<span>As thou deal’st me to-day this dais beside.”</span>
+					<span>As thou deal’st me today this dais beside.”</span>
 					<br/>
 					<span>“Whither,” said the wight, “shall I wend on that errand?</span>
 					<br/>
